added required attributes to inputfields

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
 		<form id="position-data" class="cf">
 			<fieldset>
 				<legend>Position 1:</legend>
-				<input name="pos_1-lat" type="text" class="form-input form-input-crd">
-				<input name="pos_1-lng" type="text" class="form-input form-input-crd">
-				<input name="pos_1-rds" type="text" class="form-input form-input-rds" placeholder="Radius">
+				<input name="pos_1-lat" type="text" class="form-input form-input-crd" required>
+				<input name="pos_1-lng" type="text" class="form-input form-input-crd" required>
+				<input name="pos_1-rds" type="text" class="form-input form-input-rds" placeholder="Radius" required>
 			</fieldset>
 			<fieldset>
 				<legend>Position 2:</legend>
-				<input name="pos_2-lat" type="text" class="form-input form-input-crd" placeholder="Latitude">
-				<input name="pos_2-lng" type="text" class="form-input form-input-crd" placeholder="Longtitude">
-				<input name="pos_2-rds" type="text" class="form-input form-input-rds" placeholder="Radius">
+				<input name="pos_2-lat" type="text" class="form-input form-input-crd" placeholder="Latitude" required>
+				<input name="pos_2-lng" type="text" class="form-input form-input-crd" placeholder="Longtitude" required>
+				<input name="pos_2-rds" type="text" class="form-input form-input-rds" placeholder="Radius" required>
 			</fieldset>
 			<fieldset>
 				<legend>Position 3:</legend>
-				<input name="pos_3-lat" type="text" class="form-input form-input-crd" placeholder="Latitude">
-				<input name="pos_3-lng" type="text" class="form-input form-input-crd" placeholder="Longtitude">
-				<input name="pos_3-rds" type="text" class="form-input form-input-rds" placeholder="Radius">
+				<input name="pos_3-lat" type="text" class="form-input form-input-crd" placeholder="Latitude" required>
+				<input name="pos_3-lng" type="text" class="form-input form-input-crd" placeholder="Longtitude" required>
+				<input name="pos_3-rds" type="text" class="form-input form-input-rds" placeholder="Radius" required>
 			</fieldset>
 			<button id="submit" class="form-button">Triangulate</button>
 		</form>
